fixed letter spacing for the hidden word

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,23 +16,18 @@ body {
 }
 
 .container {
-    position: fixed; 
-  top: 0; 
-  left: 0; 
-  margin: 0 auto;
-  
-  height: 100%;
-  
-	
-  /* Preserve aspet ratio */
-  min-width: 100%;
-  
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0 auto;
+    height: 100%;
+    /* Preserve aspet ratio */
+    min-width: 100%;
 }
 
 #menu.main {
     background-image: url('../images/menu.png');
-    height: 100%; 
-
+    height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -41,8 +36,7 @@ body {
 
 #gameScreen.main {
     background-image: url('../images/mainBG.jpg');
-    height: 100%; 
-
+    height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -51,8 +45,7 @@ body {
 
 #credits.main {
     background-image: url('../images/sunsetintheswamp.png');
-    height: 100%; 
-
+    height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -71,8 +64,6 @@ body {
     display: block;
     margin-top: 22%;
 }
-
-
 
 #main h1 {
     color: white;
@@ -147,26 +138,30 @@ a:hover {
     text-align: center;
     padding-top: 20%;
     color: white;
-  }
+}
 
-
-  .marquee {
+.marquee {
     top: 6em;
     position: relative;
     box-sizing: border-box;
     animation: marquee 15s linear infinite;
 }
 
-
 /* Make it move! */
+
 @keyframes marquee {
-    0%   { top:   38em }
-    100% { top: -50em }
+    0% {
+        top: 38em
+    }
+    100% {
+        top: -50em
+    }
 }
 
 /* Make it look pretty */
+
 .microsoft .marquee {
-	margin: 0;
+    margin: 0;
     padding: 0 1em;
     line-height: 1.5em;
     font-family: 'Arial', Tahoma, Helvetica, Sans-Serif;
@@ -175,27 +170,32 @@ a:hover {
     text-align: center;
 }
 
-.microsoft:before, .microsoft::before,
-.microsoft:after,  .microsoft::after {
+.microsoft:before,
+.microsoft::before,
+.microsoft:after,
+.microsoft::after {
     left: 0;
     z-index: 1;
     content: '';
     position: absolute;
     pointer-events: none;
-    width: 100%; height: 2em;
-    background-image: linear-gradient(180deg, #FFF, rgba(255,255,255,0));
+    width: 100%;
+    height: 2em;
+    background-image: linear-gradient(180deg, #FFF, rgba(255, 255, 255, 0));
 }
 
-.microsoft:after, .microsoft::after {
+.microsoft:after,
+.microsoft::after {
     bottom: 0;
     transform: rotate(180deg);
 }
 
-.microsoft:before, .microsoft::before {
+.microsoft:before,
+.microsoft::before {
     top: 0;
 }
 
-#gameConsole{
+#gameConsole {
     background-color: darkslategray;
     color: white;
     margin-top: 20px;
@@ -211,58 +211,57 @@ a:hover {
 }
 
 #hideWord {
-    float:left;
+    float: left;
     height: 500px;
     display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: 5px solid black;
-  background-color: #4d4b48;
-  border-right: 3px;
-  letter-spacing: 3px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 5px solid black;
+    background-color: #4d4b48;
+    border-right: 3px;
+    letter-spacing: 3px;
 }
 
 #scoreBoard {
-    float:left;
+    float: left;
     height: 500px;
     display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: 5px solid black;
-  border-left: 3px;
-  background-color: #a1a1a1;
-  color: black;
-  
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 5px solid black;
+    border-left: 3px;
+    background-color: #a1a1a1;
+    color: black;
 }
 
 #hint {
     margin-top: 10px;
     height: 500px;
     display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: 5px solid black;
-  background-color: whitesmoke;
-  color: black;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 5px solid black;
+    background-color: whitesmoke;
+    color: black;
 }
 
 #currentGuesses {
     margin-top: 10px;
     clear: both;
     display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: 5px solid black;
-  background-color: forestgreen;
-  color: black;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 5px solid black;
+    background-color: forestgreen;
+    color: black;
 }
 
 #tryAgain {
